Fix a regression caused by the background fullscreen handling code.

For context please refer to this patch https://codereview.chromium.org/1707233002

If a background fullscreen window's size changes again due to a minimize
operation, we do inform the delegate about the size change. However during
an activation gain if the background_fullscreen_hack_ flag is set we don't
inform the delegate about the restored size (fullscreen) which leads to this bug

Fix is to inform the delegate if the sent_window_size_changing_ flag is
set in this case.

BUG=613461

Review-Url: https://codereview.chromium.org/2007513004
Cr-Commit-Position: refs/heads/master@{#395666}

Former-commit-id: bda15a4588989436424bc74b05d6aad9c44b41df