ui/views/win/hwnd_message_handler.cc
@@ -1114,7 +1114,7 @@ void HWNDMessageHandler::TrackMouseEvents(DWORD mouse_tracking_flags) {
 
 void HWNDMessageHandler::ClientAreaSizeChanged() {
   // Ignore size changes due to fullscreen windows losing activation.
-  if (background_fullscreen_hack_)
+  if (background_fullscreen_hack_ && !sent_window_size_changing_)
     return;
   gfx::Size s = GetClientAreaBounds().size();
   delegate_->HandleClientSizeChanged(s);
